--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,11 +158,15 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Test,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Test,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Test,
+NameProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+FluxMaster_BP_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+EdGraph=EdGraph.Inputs.InputArgument0,
+TEST_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Flux
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Spells
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=False
@@ -935,21 +939,42 @@ FluxMaster_BP_C.TransformCommon=True
 FluxMaster_BP_C.Rendering=True
 FluxMaster_BP_C.Input=True
 FluxMaster_BP_C.Actor=True
+MasterSpell_B_C.TransformCommon=True
+FluxMaster_BP_C.Tick=True
+FluxMaster_BP_C.Replication=True
+NameProperty.Variable=True
+NameProperty.DefaultValueCategory=True
+K2Node_SwitchName.PinOptions=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+TEST_C.Tick=True
+TEST_C.Default=True
+TEST_C.Rendering=True
+TEST_C.Replication=True
+TEST_C.Input=True
+TEST_C.Actor=True
+TEST_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/PlayerCharacter_Blueprint
-MRUItem1=/Game/Blueprints/Spells/MasterSpell_B
-MRUItem2=/Game/Blueprints/InputControl
-MRUItem3=/Game/Blueprints/Player_Start_Blueprint
+MRUItem0=/Game/Blueprints/Spells/MasterSpell_B
+MRUItem1=/Game/Blueprints/Spells/TEST
+MRUItem2=/Game/Blueprints/Spells/Base_Spell_B
+MRUItem3=/Game/Blueprints/Flux/FluxMaster_BP
 MRUItem4=/Game/Maps/DebugMap
-MRUItem5=/Game/Blueprints/MasterSpell_B
-MRUItem6=/Game/Blueprints/Base_Spell_B
-MRUItem7=/Game/Blueprints/FireSpell_B
-MRUItem8=/Game/Blueprints/Flux
-MRUItem9=/Game/Blueprints/Player
-MRUItem10=/Game/Blueprints/NewBlueprint1
-MRUItem11=/Game/Materials/M_Landscape
-MRUItem12=/Game/Maps/TutorialMap
+MRUItem5=/Game/Blueprints/PlayerCharacter_Blueprint
+MRUItem6=/Game/Blueprints/InputControl
+MRUItem7=/Game/Blueprints/Player_Start_Blueprint
+MRUItem8=/Game/Blueprints/MasterSpell_B
+MRUItem9=/Game/Blueprints/Base_Spell_B
+MRUItem10=/Game/Blueprints/FireSpell_B
+MRUItem11=/Game/Blueprints/Flux
+MRUItem12=/Game/Blueprints/Player
+MRUItem13=/Game/Blueprints/NewBlueprint1
+MRUItem14=/Game/Materials/M_Landscape
+MRUItem15=/Game/Maps/TutorialMap
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1013,16 +1038,24 @@ bUseUnsortedMenus=False
 [DetailPropertyExpansion]
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
 MaterialExpression=
-Object=
-MasterSpell_B_C="\"Object.ForceMulti\" \"Object.ForceMulti\" "
+Object="\"Object.PinOptions.PinNames\" "
+MasterSpell_B_C=
 Base_Spell_B_C=
-UserConstructionScript="\"Struct.NewLocalVar_0\" "
+UserConstructionScript=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" "
+FluxMaster_BP_C=
+K2Node_SwitchName="\"Object.PinOptions.PinNames\" "
+K2Node_Switch="\"Object.PinOptions.PinNames\" "
+K2Node="\"Object.PinOptions.PinNames\" "
+EdGraphNode="\"Object.PinOptions.PinNames\" "
+TEST_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Spells/TEST.TEST;
 RecentlyPlaced=/Game/Blueprints/Flux/FluxMaster_BP.FluxMaster_BP;
+RecentlyPlaced=/Game/Blueprints/Spells/MasterSpell_B.MasterSpell_B;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1037,6 +1070,9 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 /Game/Maps/DebugMap.DebugMap:PersistentLevel.DebugMap=1
 /Game/Blueprints/InputControl.InputControl=0
 /Game/Blueprints/PlayerCharacter_Blueprint.PlayerCharacter_Blueprint=0
+/Game/Blueprints/Flux/FluxMaster_BP.FluxMaster_BP=1
+/Game/Blueprints/Spells/TEST.TEST=1
+/Game/Blueprints/Spells/Base_Spell_B.Base_Spell_B=1
 
 [MaterialEditor]
 PrimType=1
@@ -1130,7 +1166,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 PlayerStart.Actor=True
 
 [Directories2]
-UNR=../../../../../../Users/Riaz/Documents/Unreal Projects/DodgeAndDispell/Content/Maps
+UNR=../../../../../Github/DodgeAndDispell/Content/Maps
 BRUSH=../../../../../../Users/Riaz/Documents/Unreal Projects/DodgeAndDispell/Content/
 FBX=../../../../../../Users/Riaz/Documents/Unreal Projects/DodgeAndDispell/Content/
 FBXAnim=../../../../../../Users/Riaz/Documents/Unreal Projects/DodgeAndDispell/Content/
